# learn-python

./: Makefile  README.md  conftest.py  pyproject.toml
01_fundamentals/: 01_syntax_basics.py  02_data_structures.py  03_oop.py  04_error_handling.py  05_file_io.py  README.md
01_fundamentals/projects/: log_analyzer.py  todo_app.py
01_fundamentals/tests/: test_fundamentals_ds.py
02_algorithms/: README.md
02_algorithms/algorithms/: dynamic_programming.py  graph.py  sorting.py
02_algorithms/competitive_programming/: __init__.py  syntax_patterns.py  tips_and_tricks.py
02_algorithms/data_structures/: hash_table.py  heap.py  lru_cache.py  trie.py
02_algorithms/tests/: test_algo_ds.py  test_competitive_programming.py
03_design_patterns/: README.md  di_container.py
03_design_patterns/behavioral/: observer.py  strategy.py
03_design_patterns/creational/: factory.py  singleton.py
03_design_patterns/structural/: decorator.py
03_design_patterns/tests/: test_patterns.py
04_testing/: README.md  conftest.py
04_testing/examples/: calculator.py
04_testing/tests/: test_calculator.py  test_property_based.py
05_performance/: README.md  async_demo.py  multiprocessing_demo.py  profiling_demo.py
05_performance/projects/: parallel_processor.py
05_performance/projects/hpc_project/: README.md  __init__.py  benchmark.py  caching.py  main.py  memory_efficient.py  parallel_matrix.py  vectorized_ops.py
06_systems/: README.md
06_systems/networking/: http_server.py  tcp_server.py
06_systems/os_interaction/: process_manager.py  task_scheduler.py
07_backend/: Dockerfile  README.md
07_backend/app/: __init__.py  auth.py  main.py  models.py
07_backend/app/routers/: __init__.py  users.py
07_backend/tests/: test_api.py
08_data_engineering/: README.md
08_data_engineering/pipeline/: extractor.py  loader.py  orchestrator.py  transformer.py
08_data_engineering/tests/: test_etl_pipeline.py
09_ml_engineering/: README.md
09_ml_engineering/pipeline/: feature_engineering.py  model_evaluator.py  model_trainer.py
09_ml_engineering/serving/: inference_api.py
09_ml_engineering/tests/: test_ml_pipeline.py
10_expert/: README.md
10_expert/mini_framework/: core.py  middleware.py  router.py
10_expert/task_queue/: queue.py  worker.py
10_expert/tests/: test_framework.py
